Improve resource paths while we're at it